--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- FORMULAR -->
     <main>
-      <h1>Zadejte údaje nového pojištěnce check:</h1>
+      <h1>Zadejte údaje nového pojištěnce:</h1>
 
       <form>
         <div id="image-and-form">
